removed explanatory -> predictor

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -96,7 +96,7 @@ is fair, or perhaps how to set the price of a new listing.
 The scientific question guides our initial exploration: the columns in the
 data that we are interested in are `sqft` (house size, in livable square feet)
 and `price` (house sale price, in US dollars (USD)).  The first step is to visualize
-the data as a scatter plot where we place the predictor/explanatory variable
+the data as a scatter plot where we place the predictor variable
 (house size) on the x-axis, and we place the target/response variable that we
 want to predict (sale price) on the y-axis.
 
