--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -1,10 +1,10 @@
 # Regression II: linear regression {#regression2}
 
 ## Overview 
-Up until this point, we have solved all of our predictive problems---both classification
-and regression---using K-nearest neighbours (KNN)-based approaches. But while KNN methods are 
-simple and flexible, in the context of regression, there is another method (generally more popular in
-most scientific disciplines) known as *linear regression*. This chapter provides an introduction
+Up to this point, we have solved all of our predictive problems---both classification
+and regression---using K-nearest neighbours (KNN)-based approaches. In the context of regression, 
+there is another method commonly used 
+in scientific disciplines known as *linear regression*. This chapter provides an introduction
 to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
 and characterizes its strengths and weaknesses compared to KNN regression. The focus is, as usual,
 on the case where there is a single predictor and single response variable of interest; but the chapter
@@ -16,7 +16,7 @@ By the end of the chapter, students will be able to:
 
 * Use R and `tidymodels` to fit a linear regression model on training data.
 * Evaluate the linear regression model on test data.
-* Compare and contrast predictions obtained from K-nearest neighbour regression to those obtained using simple ordinary least squares regression from the same dataset.
+* Compare and contrast predictions obtained from K-nearest neighbour regression to those obtained using linear regression from the same dataset.
 * In R, overlay regression lines from `geom_smooth` on a single plot. 
 
 ## Simple linear regression
@@ -104,9 +104,10 @@ the range of your original data, and perhaps a bit beyond it only if it makes se
 the data in Figure \@ref(fig:08-lin-reg1) only reaches around 800 square feet on the low end, but 
 it would probably be reasonable to use the linear regression model to make a prediction at 600 square feet, say.
 
-Back to the example! Once we have the coefficients, we can use the equation above to evaluate the predicted sale price given the value we
-have for the predictor/explanatory variable&mdash;here 2,000 square feet. Figure \@ref(fig:08-lin-reg2)
-demonstrates this process.
+Back to the example! Once we have the coefficients $\beta_0$ and $\beta_1$, we can use the equation
+above to evaluate the predicted sale price given the value we have for the
+predictor variable&mdash;here 2,000 square feet. Figure
+\@ref(fig:08-lin-reg2) demonstrates this process.
 
 ```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of sale price versus size with line of best fit and a red dot at the predicted sale price for a 2000 square foot home"}
 small_model <- lm(price ~ sqft, data = small_sacramento)
@@ -325,7 +326,7 @@ model to a straight line. A
 straight line can be defined by two numbers, the
 vertical intercept and the slope. The intercept tells us what the prediction is when
 all of the predictors are equal to 0; and the slope tells us what unit increase in the target/response
-variable we predict given a unit increase in the predictor/explanatory
+variable we predict given a unit increase in the predictor
 variable. KNN regression, as simple as it is to implement and understand, has no such
 interpretability from its wiggly line. 
 
