wip tt comments on sup learning

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -63,7 +63,7 @@ classes are involved (e.g., a diagnosis of either healthy or diseased), but you 
 also run into multiclass classification problems with more than two
 categories (e.g., a diagnosis of healthy, bronchitis, pneumonia, or a common cold).
 
-## Exploring a labelled data set
+## Exploring a data set
 
 In this chapter and the next, we will study a data set of 
 [digitized breast cancer image features](http://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29),
