removed easy to understand in strengths, replace with intuitive

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -668,13 +668,13 @@ The overall workflow for performing K-nearest neighbour classification using `ti
 
 All algorithms have strengths and weaknesses. We summarize these for the K-nearest neighbours algorithm here.
 
-**Strengths:** The K-nearest neighbours classifier
+**Strengths:** K-nearest neighbours classification
 
 1. is a simple, intuitive algorithm
 2. requires few assumptions about what the data must look like 
 3. works for binary (two-class) and multi-class (more than 2 classes) classification problems
 
-**Weaknesses:** The K-nearest neighbours classifier
+**Weaknesses:** K-nearest neighbours classification
 
 1. becomes very slow as the training data gets larger
 2. may not perform well with a large number of predictors
