--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -493,17 +493,13 @@ plot_final
 As with KNN classification (or any prediction algorithm for that matter), KNN 
 regression has both strengths and weaknesses. Some are listed here:
 
-**Strengths:**
+**Strengths:** K-nearest neighbours regression
 
-K-nearest neighbours regression:
-
-1. is simple and easy to understand
+1. is a simple, intuitive algorithm
 2. requires few assumptions about what the data must look like 
 3. works well with non-linear relationships (i.e., if the relationship is not a straight line)
 
-**Weaknesses:**
-
-K-nearest neighbours regression:
+**Weaknesses:** K-nearest neighbours regression
 
 1. becomes very slow as the training data gets larger
 2. may not perform well with a large number of predictors
